@@ -47,7 +47,7 @@ span.span_recipient-country	{display:block; vertical-align:top; width:960px;}
 recipient-country 			{display:block; vertical-align:top; padding:20px 40px;}
 span.span_recipient-country:before {content:"RECIPIENT COUNTRY"; font-size:14px; color:#000; padding:30px 0 0 40px; display:block;}
 recipient-country span		{font-size:48px; color:#000;}
-recipient-country span:nth-of-type(2)	{font-size:20px; color:#000;}
+recipient-country span:nth-of-type(2)	{font-size:20px; color:#000; padding-top:10px;}
 
 
 /*	Start and End dates
