@@ -95,7 +95,7 @@ a.view_all_money:hover	{background-color:#000; color:#fff;}
 	============================================= */
 .map_wrap.view			{width:960px; min-height:600px; max-height:600px;}
 .map_no_info.view		{color:#fff; font-size:1.2em; line-height:1.35em; text-align:center; position:absolute; top:50%; left:20%; right:20%;}
-#map.view				{width:100%; height:600px;}
+#map.map_view			{width:100%; height:600px;}
 
 
 /*	Stats (key figures) styles
