@@ -41,7 +41,7 @@ span.span_recipient-country				{display:block; vertical-align:top; width:960px; 
 recipient-country 						{display:block; vertical-align:top; padding:20px 40px;}
 span.span_recipient-country:before 		{content:"RECIPIENT COUNTRY"; font-size:14px; color:#fff; padding:30px 0 0 40px; display:block;}
 recipient-country span					{font-size:48px; color:#fff;}
-recipient-country span:nth-of-type(2)	{font-size:20px; color:#fff;}
+recipient-country span:nth-of-type(2)	{font-size:20px; color:#fff; padding-top:10px;}
 
 
 /*	Start and End dates
