@@ -1,3 +1,8 @@
+Development Portal (2014-04-12 shi)
+==============================
+Fixed map height for High Vis flava
+
+
 Development Portal (2014-04-11 shi)
 ==============================
 Added new text to descriptions
